test/src/e2e_vm_tests/test_programs/should_fail/impl_private_method/src/lib.sw
library lib;

pub struct MyStruct {
    x: u64,
}

impl MyStruct {
    fn foo(self) {}

    fn bar() {}
}